Fix form on mobile

--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -153,3 +153,9 @@ p.light
     display block
   .desktop
     display none
+
+@media (max-width: 480px)
+  .pure-form
+    text-align left
+    label
+      font-size 11px
